--- a/css/style.css
+++ b/css/style.css
@@ -1085,29 +1085,19 @@ body {
 
 
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 @media (max-width: 768px) {
+    
+    .leadership {
+        margin-top: 180px;
+    }
+    
+    
     .leadership h2 {
         font-size: 26px;
         margin-top: 140px;
+        width: 90%;
+        margin: auto;
+        padding-bottom: 20px;
     }
     
     .leadership p {
@@ -1141,42 +1131,6 @@ body {
     
 
 }
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
 
 
@@ -1289,6 +1243,75 @@ body {
 
 
 
+
+@media (max-width: 768px) {
+    
+    .blog-container {
+        margin-top: 180px;
+    }
+    
+    .blog-container h2 {
+        font-size: 30px;
+    }
+
+    .blog-container .lower {
+        font-size: 22px;
+        padding-top: 20px;
+        width: 90%;
+        margin: auto;
+    }
+
+    .blog-section {
+        flex-direction: column;
+        align-items: center;
+        padding: 30px 0;
+    }
+
+    .blog-post {
+        width: 90%;
+        margin: 15px 0;
+        text-align: center;
+    }
+
+    .blog-post img {
+        width: 100%;
+    }
+
+    .blog-post h3 {
+        font-size: 22px;
+    }
+
+    .blog-post p {
+        font-size: 12px;
+        line-height: 22px;
+        max-height: none;
+        overflow: visible;
+        text-align: justify;
+
+
+        max-height: 125px;          
+        overflow: hidden; 
+    }
+
+    .read-more {
+        font-size: 12px;
+        padding: 8px 16px;
+        width: 100px;
+    }
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
 .diagonal {
     margin: auto;
     width: 95%;
@@ -1302,6 +1325,19 @@ body {
     top: 4030px;
     border-top-left-radius: 200px;
     overflow: hidden;
+}
+
+
+@media (max-width: 768px) {
+    .diagonal {
+        width: 100%;
+        height: 300px;
+        clip-path: polygon(0% 10%, 100% 0%, 100% 100%, 0% 100%);
+        border-top-left-radius: 100px;
+        left: 0;
+        top: auto;
+        position: relative;
+    }
 }
 
 
