--- a/css/style.css
+++ b/css/style.css
@@ -16,7 +16,6 @@ body {
     padding: 15px 50px;
     width: 100%;
     height: 100px;
-
 }
 
 .header img {
@@ -60,11 +59,6 @@ body {
     margin-left: 160px;
     text-transform: capitalize;
 }
-
-
-
-
-
 
 /* Mobile Responsiveness */
 @media (max-width: 768px) {
@@ -110,96 +104,7 @@ body {
         border-radius: 50px;
         margin-left: 10px;
     }
-
 }
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
 
 
@@ -266,15 +171,6 @@ body {
     margin-left: 25px;
 }
 
-
-
-
-
-
-
-
-
-
 @media (max-width: 768px) {
     .hero {
         height: auto;
@@ -326,88 +222,6 @@ body {
 
 
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 /*** time and location ***/
 
 .oval-container {
@@ -426,16 +240,13 @@ body {
     margin: auto;
     margin-top: -70px;
     font-family: 'Playfair Display', serif;
-
 }
-
 
 .oval-container img {
     width: 25px;
     vertical-align: middle;
     /* Keeps it aligned properly */
 }
-
 
 .oval-container .service-time h2,
 .oval-container .location-info h2 {
@@ -448,7 +259,6 @@ body {
     gap: 8px;
     /* Adds spacing between the image and text */
 }
-
 
 .oval-container:hover {
     transform: scale(1.05);
@@ -487,12 +297,6 @@ body {
     background: white;
     opacity: 0.5;
 }
-
-
-
-
-
-
 
 @media (max-width: 768px) {
     .oval-container {
@@ -547,79 +351,6 @@ body {
 
 
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 /* General Section Styling */
 .about-section {
     position: relative;
@@ -637,7 +368,6 @@ body {
 .about {
     position: absolute;
     top: 30px;
-
     border: 1px solid #C3A07B;
     color: #C3A07B;
     text-align: center;
@@ -645,14 +375,12 @@ body {
     padding: 13px;
     border-radius: 50px;
     text-decoration: none;
-
     margin-left: 25px;
     left: 20px;
     font-family: 'Lato', sans-serif;
     z-index: 10;
     font-size: 12px;
 }
-
 
 /* Left Page */
 .left-page {
@@ -687,7 +415,6 @@ body {
     color: #24161C;
     margin-bottom: 20px;
     padding-bottom: 0;
-
 }
 
 .right-page p {
@@ -718,29 +445,11 @@ body {
     padding: 16px;
     text-align: center;
     text-decoration: none;
-
     margin-top: 10px;
     font-family: 'Lato', sans-serif;
     text-decoration: none;
     font-size: 12px;
 }
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
 /* Mobile Responsiveness */
 @media (max-width: 768px) {
@@ -798,32 +507,6 @@ body {
 
 
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 /* Social Proof Section */
 .social-proof-container {
     position: relative;
@@ -838,7 +521,6 @@ body {
 
 }
 
-
 /* Background Image */
 .social-proof-container .excess img {
     object-fit: cover;
@@ -846,11 +528,7 @@ body {
     top: 0;
     left: 0;
     z-index: -1;
-
-
-
 }
-
 
 /* Social Proof */
 .social-proof {
@@ -892,7 +570,6 @@ body {
     line-height: 29px;
 }
 
-
 .stats-container {
     display: flex;
     justify-content: center;
@@ -932,15 +609,6 @@ body {
     font-family: 'Playfair Display', serif;
 }
 
-
-
-
-
-
-
-
-
-
 /* Mobile Responsiveness */
 @media (max-width: 768px) {
 
@@ -964,7 +632,6 @@ body {
         background: rgba(0, 0, 0, 0.5);
         border-radius: 53px;
     }
-
 
     .social-proof h2 {
         font-size: 28px;
@@ -994,8 +661,6 @@ body {
         /* Adds horizontal line */
     }
 
-
-
     .stat-box h3 {
         font-size: 30px;
         margin: 0;
@@ -1011,38 +676,12 @@ body {
         /* Centers the text */
     }
 
-
     .stat-box p {
         font-size: 12px;
         margin-top: 10px;
         color: #ffffff;
     }
 }
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
 
 
@@ -1113,15 +752,10 @@ body {
     font-weight: normal;
 }
 
-
-
-
 @media (max-width: 768px) {
-
     .leadership {
         margin-top: 180px;
     }
-
 
     .leadership h2 {
         font-size: 26px;
@@ -1159,24 +793,7 @@ body {
     .leader-card h3 {
         font-size: 22px;
     }
-
-
 }
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
 
 
@@ -1203,7 +820,6 @@ body {
     letter-spacing: normal;
 }
 
-
 /**  blog-section  **/
 .blog-section {
     display: flex;
@@ -1221,7 +837,6 @@ body {
     box-shadow: 5px 5px 15px rgba(0, 0, 0, 0.2);
     font-family: 'Lato', sans-serif;
 }
-
 
 .blog-post img {
     width: 80%;
@@ -1260,20 +875,6 @@ body {
 .label {
     display: none;
 }
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
 @media (max-width: 768px) {
 
@@ -1333,29 +934,6 @@ body {
 
 
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 .diagonal {
     margin: auto;
     width: 95%;
@@ -1371,7 +949,6 @@ body {
     overflow: hidden;
 }
 
-
 @media (max-width: 768px) {
     .diagonal {
         width: 90%;
@@ -1380,7 +957,7 @@ body {
         border-top-left-radius: 100px;
         top: 90px;
         position: relative;
-        
+
     }
 }
 
@@ -1388,11 +965,7 @@ body {
 
 
 
-
-
 /* Footer CSS */
-
-
 .footer {
     display: flex;
     justify-content: space-around;
@@ -1404,7 +977,6 @@ body {
     padding-top: 100px;
     border-top-left-radius: 200px;
     overflow: hidden;
-
 }
 
 
@@ -1458,7 +1030,6 @@ body {
     font-size: 18px;
     margin-bottom: 15px;
     font-family: 'Lato', sans-serif;
-
 }
 
 .footer .nav ul,
@@ -1473,9 +1044,6 @@ body {
     text-decoration: none;
     font-size: 14px;
 }
-
-
-
 
 /* Social Media */
 .footer .social-media {
@@ -1505,12 +1073,6 @@ body {
     width: 40px;
 }
 
-
-
-
-
-
-
 @media (max-width: 768px) {
     .footer {
         flex-direction: column;
@@ -1519,7 +1081,8 @@ body {
         border-top-left-radius: 100px;
         padding-top: 60px;
         clip-path: polygon(0% 1%, 100% 0%, 100% 100%, 0% 100%);
-
+        padding-bottom: 0%;
+        margin-bottom: -50px;
     }
 
     .footer .address,
@@ -1532,14 +1095,36 @@ body {
     }
 
 
-    .footer .address  {
+    .footer .address {
         margin-top: -20px;
         width: 80%;
     }
 
-.icons-footer {
-    text-align: left;
-}
+    .footer p {
+        text-align: left;
+    }
+
+    .croped img {
+        width: 80px;
+        height: 60px;
+    }
+
+    .icons-footer {
+        text-align: left;
+    }
+
+    .footer .nav,
+    .footer .com {
+        text-align: left;
+        width: 80%;
+        padding-left: 25%;
+    }
+
+
+    .footer .nav ul li,
+    .footer .com ul li {
+        line-height: 30px;
+    }
 
     .footer .social-media ul {
         width: 100%;
@@ -1547,56 +1132,12 @@ body {
     }
 
 
-    .footer .nav , .com ul  {
-        text-align: left;
-        width: 80%;
-        padding-left: 25%;
-    }
-
     .footer .social-media h3 {
         margin-left: 0;
     }
 
-    .croped img {
-        width: 80px;
-        height: 60px;
-    }
+
 }
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
 
 
@@ -1607,13 +1148,9 @@ body {
 
 .footer-line {
     width: 92%;
-    /* Adjust this to control the line width */
     height: 1px;
-    /* Line thickness */
     background-color: #DED2B8;
-    /* Line color */
     margin: 0 auto 10px auto;
-    /* Center the line and add spacing */
     margin-bottom: 20px;
 }
 
@@ -1623,4 +1160,35 @@ body {
     padding-left: 4%;
     font-family: 'Lato', sans-serif;
     font-weight: lighter;
+}
+
+@media screen and (max-width: 768px) {
+    .footer-bottom {
+        height: auto;
+        padding: 15px 0;
+        text-align: center;
+        position: absolute;
+        margin: auto;
+        width: 100%;
+    }
+
+    .footer-line {
+        width: 85%;
+        margin: 0 auto 15px auto;
+    }
+
+    .copyright {
+        font-size: 12px;
+        padding-left: 0;
+    }
+}
+
+@media screen and (max-width: 480px) {
+    .footer-line {
+        width: 80%;
+    }
+
+    .copyright {
+        font-size: 11px;
+    }
 }
