--- a/css/style.css
+++ b/css/style.css
@@ -63,48 +63,53 @@ body {
 /* Mobile Responsiveness */
 @media (max-width: 768px) {
     .header {
-        flex-direction: row;
-        /* Keep the header layout horizontal */
-        justify-content: space-between;
-        /* Space out the logo and navigation */
+        flex-direction: column;
         align-items: center;
-        padding: 15px;
-        width: 100%
+        padding: 0.625rem 1.25rem;
+        height: auto;
     }
 
     .header img {
-        height: 100px;
+        height: 6rem;
         padding-left: 0;
+        margin-bottom: 0.1rem;
     }
 
     .nav-links {
-        display: flex;
-        /* Keep the navigation horizontal */
-        margin: 0;
+        flex-direction: row;
+        justify-content: center;
+        flex-wrap: wrap;
+        width: 100%;
+        margin-left: 0;
         padding: 0;
-        text-align: center;
+        display: flex;
     }
 
     .nav-links li {
-        margin: 0 10px;
-        padding: 0;
-        margin-left: 0;
+        padding: 0.5rem;
+        margin: 0;
+    }
+    .cta-header a {
+        display: inline;
+        background-color: initial;
+        color: initial;
+        width: initial;
+        border-radius: initial;
+        padding: initial;
+        text-align: initial;
+        margin-top: initial;
+        margin-left: initial;
     }
 
-    .nav-links a {
-        font-size: 10px;
-        /* Reduced font-size */
+    .nav-links a,
+    .cta-header a {
+        font-size: 0.6rem;
+        font-weight: 500;
+        padding: 0.3rem;
         text-transform: capitalize;
     }
-
-    .cta-header a {
-        padding: 12px 20px;
-        margin-top: 0;
-        width: auto;
-        border-radius: 50px;
-        margin-left: 10px;
-    }
 }
+
 
 
 
