--- a/css/style.css
+++ b/css/style.css
@@ -303,7 +303,7 @@ body {
         flex-direction: column;
         padding: 1.25rem; /* Converted 20px to rem */
         text-align: center;
-        margin-top: 1.25rem; /* Converted 20px to rem */
+        margin-top: 2.25rem; /* Converted 20px to rem */
     }
 
     .location-info,
@@ -321,7 +321,7 @@ body {
 
     .oval-container .service-time h2,
     .oval-container .location-info h2 {
-        font-size: 1.375rem; /* Converted 22px to rem */
+        font-size: 1rem; /* Converted 22px to rem */
         gap: 0.3125rem; /* Converted 5px to rem */
     }
 
@@ -442,53 +442,49 @@ body {
 @media (max-width: 768px) {
     .about-section {
         flex-direction: column;
-        padding: 20px;
+        gap: 30px;
+        padding: 8vw;
+        padding-top: 32vw;
     }
 
     .about {
-        position: static;
-        margin-left: 0;
-        margin-bottom: 20px;
-        margin-top: 60px;
-        font-size: 14px;
-    }
-
-    .left-page {
-        width: 100%;
-        margin-bottom: 20px;
+        top: 30vw;
+        width: 50%;
+        padding: 3vw;
+        font-size: 3vw;
+        left: 43%;
+        transform: translateX(-50%);
+       
     }
 
     .left-page img {
-        width: 100%;
+        width: 90%;
         height: auto;
-        border-radius: 10px;
+        display: none;
     }
 
     .right-page {
-        width: 100%;
+        align-items: center;
         text-align: center;
+        padding: 5vw;
     }
 
     .right-page h2 {
-        font-size: 22px;
+        font-size: 4vw;
     }
 
-    .right-page p {
-        font-size: 12px;
-        text-align: left;
-    }
-
+    .right-page p,
     .right-page ul li {
-        font-size: 12px;
-        text-align: left;
+        font-size: 2.5vw;
     }
 
     .reach {
-        width: 160px;
-        font-size: 14px;
-        margin-top: 20px;
+        width: 60%;
+        padding: 4vw;
+        font-size: 3vw;
     }
 }
+
 
 
 
