--- a/css/style.css
+++ b/css/style.css
@@ -65,7 +65,7 @@ body {
     .header {
         flex-direction: column;
         align-items: center;
-        padding: 0.625rem 1.25rem;
+        padding: 0.625rem 0;
         height: auto;
     }
 
@@ -86,7 +86,7 @@ body {
     }
 
     .nav-links li {
-        padding: 0.5rem;
+        padding: 0 1rem;
         margin: 0;
     }
     .cta-header a {
@@ -103,7 +103,7 @@ body {
 
     .nav-links a,
     .cta-header a {
-        font-size: 0.6rem;
+        font-size: 0.7rem;
         font-weight: 500;
         padding: 0.3rem;
         text-transform: capitalize;
