--- a/css/style.css
+++ b/css/style.css
@@ -563,8 +563,15 @@ body {
 
 .stat-box {
     padding: 20px;
-    border-radius: 10px;
     width: 200px;
+}
+
+.middle-line {
+    background-color: white;
+    width: 1px;
+    margin: 0%;
+    height: 80px;
+    margin-top: 30px;
 }
 
 .stat-box h3 {
@@ -643,6 +650,9 @@ body {
         width: 200px;
         border-bottom: 2px solid #ffffff;
         /* Adds horizontal line */
+    }
+    .middle-line {
+        display: none;
     }
 
     .stat-box h3 {
